# series-catalog-management

./: AbstractSeriesDAO.cpp  AbstractSeriesDAO.h  CMakeLists.txt  Controller.cpp  Controller.h  Dockerfile  MainController.cpp  MainController.h  MemoryDBConnection.cpp  MemoryDBConnection.h  Menu.cpp  Menu.h  README.md  ReportsController.cpp  ReportsController.h  Series.cpp  Series.h  SeriesController.cpp  SeriesController.h  SeriesDBDAO.cpp  SeriesDBDAO.h  SeriesMemDAO.cpp  SeriesMemDAO.h  ServerDBConnection.cpp  ServerDBConnection.h  TextFromFile.cpp  TextFromFile.h  docker-compose.yml  main.cpp  output
